--- a/app/views/todos/_todo-section.html.erb
+++ b/app/views/todos/_todo-section.html.erb
@@ -5,14 +5,33 @@
   </div>
   <ul class = "TodoLinks">
     <% todos.all.each do |todo| %>
-    <li class="TodoItem">
-      <div class="TodoItem-container">
-        <input class="TodoItem-checkbox" type="checkbox" />
-        <span><%= todo.todo_text %></span>
-        <p class = "TodoItem-dateaddded"><% if show_due_date %><%= todo.due_date.to_s(:short) %> <% end %></p>
-        <a><div class = "TodoItem-delete"><img src="delete.svg"/></div></a>
-      </div>
-    </li>
-  <% end %>
-</ul>
+      <% if todo.completed %>
+        <li class="TodoItem">
+          <div class="TodoItem-container">
+            <input class="TodoItem-checkbox" type="checkbox" />
+            <span><%= todo.todo_text %></span>
+            <p class = "TodoItem-dateaddded">
+              <% if show_due_date %>
+                <%= todo.due_date.to_s(:short) %>
+              <% end %>
+            </p>
+            <a><div class = "TodoItem-delete"><img src="delete.png"/></div></a>
+          </div>
+        </li>
+      <% elsif section_title != "Overdue" %>
+        <li class="TodoItem">
+          <div class="TodoItem-container">
+            <input class="TodoItem-checkbox" type="checkbox" checked/>
+            <span class = "TodoItem-strike" ><%= todo.todo_text %></span>
+            <p class = "TodoItem-dateaddded">
+              <% if show_due_date %>
+                <%= todo.due_date.to_s(:short) %>
+              <% end %>
+            </p>
+            <a><div class = "TodoItem-delete"><img src="delete.png"/></div></a>
+          </div>
+        </li>
+      <% end %>
+    <% end %>
+  </ul>
 </section>
