--- a/app/views/todos/_todo-section.html.erb
+++ b/app/views/todos/_todo-section.html.erb
@@ -5,24 +5,17 @@
   </div>
   <ul class = "TodoLinks">
     <% todos.all.each do |todo| %>
-      <% if !todo.completed %>
+      <% if section_title != "Overdue" or !todo.completed %>
         <li class="TodoItem">
           <div class="TodoItem-container">
-            <input class="TodoItem-checkbox" type="checkbox" />
-            <span><%= todo.todo_text %></span>
-            <p class = "TodoItem-dateaddded">
-              <% if show_due_date %>
-                <%= todo.due_date.to_s(:short) %>
-              <% end %>
-            </p>
-            <a><div class = "TodoItem-delete"><img src="delete.png"/></div></a>
-          </div>
-        </li>
-      <% elsif section_title != "Overdue" %>
-        <li class="TodoItem">
-          <div class="TodoItem-container">
-            <input class="TodoItem-checkbox" type="checkbox" checked/>
-            <span class = "TodoItem-strike" ><%= todo.todo_text %></span>
+              <%= form_with(url: "/todos/#{todo.id}", method: "put") do %>
+              <input class="TodoItem-checkbox" name =  completed
+                type="checkbox" <%= todo.completed ? "checked" : "" %>
+                onclick = "this.form.submit()"/>
+                <% end %>
+          <span class='<%= todo.completed ? "TodoItem-strike" : "" %>'>
+            <%= todo.todo_text %>
+          </span>
             <p class = "TodoItem-dateaddded">
               <% if show_due_date %>
                 <%= todo.due_date.to_s(:short) %>
