Added signin functionality without session

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,7 +18,7 @@
       <%= form.password_field :password, class: "Form-input" %>
     </div>
     <div class = "Form-section">
-      <%= form.submit "Sign up", class: "Form-submit" %>
+      <%= form.submit "SIGN UP", class: "Form-submit" %>
     </div>
   <% end %>
 </section>
