--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -7,3 +7,10 @@
   font-size: 16px;
   margin-bottom: 20px;
 }
+
+.UserHeader {
+  font-size: 14px;
+  background-color: lightgrey;
+  padding: 10px;
+  margin-bottom: 10px;
+}
