Added flash message for invalid login

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -16,3 +16,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+.Flash-error {
+  color: darkred;
+  font-size: 16px;
+  margin-bottom: 20px;
+}
