--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,12 @@
         <%= link_to "Sign Out", destroy_sessions_path, method: "delete" %>
       </p>
     <% end %>
+    <% if flash[:error] %>
+      <p class = "Flash-error">
+        <%= flash[:error] %>
+      </p>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
