Added validation for first name, email and password

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <% end %>
     <% if flash[:error] %>
       <p class = "Flash-error">
-        <%= flash[:error] %>
+        <%= flash[:error].html_safe %>
       </p>
     <% end %>
 
